<resources>
    <string name="app_name" translatable="false">Gallery App</string>
    <string name="name">Name</string>
    <string name="home_bottom_nav_text">Home</string>
    <string name="account_bottom_nav_text">Account</string>
    <string name="search_bottom_nav_text">Search</string>
    <string name="settings_icon_text">Settings</string>
    <string name="log_out_icon_text">Log Out</string>
    <string name="log_in_icon_text">Log In</string>
    <string name="log_in_action">Log In</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="saved">Saved</string>
    <string name="created">Created</string>
    <string name="nothing_found">Nothing found...</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="manage_account">Manage account</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_avatar">Change avatar</string>
    <string name="log_out">Log Out</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>

    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_theme">System</string>

    <string name="lets_start" translatable="false">Let\'s start</string>

    <string name="public_folder">Public</string>
    <string name="private_folder">Private</string>
    <string name="private_enum">private</string>
    <string name="public_enum">public</string>
    <string name="save">save</string>


    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>