<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.account.AccountFragment">

    <com.example.galleryapp.views.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_title="hello аыоваыожалатыжвожповажпожваполжвыапожвыапловжапо"
        app:toolbar_back_color="@color/secondaryContainer"
        app:trailing_icon="@drawable/ic_login"
        app:trailing_icon_visibility="true"/>

    <com.example.galleryapp.views.AvatarImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/app_name"
        />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/created"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/saved"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"/>


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folder_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spanCount="2"
        tools:itemCount="5"
        tools:listitem="@layout/item_folder" />

</LinearLayout>